--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 :root {
-    --cor-primaria: #000;
-    --cor-secundaria: #fff;
+    --cor-primaria: #f0f0f5;
+    --cor-secundaria: #322153;
     --fonte-primaria: "Roboto", Helvetica, Arial, sans-serif;
 }
 
@@ -83,8 +83,8 @@ body {
 
 #btn-start {
     border: none;
-    background-color: #023c57;
-    color: var(--cor-secundaria);
+    background-color: var(--cor-secundaria);
+    color: var(--cor-primaria);
     width: 100px;
     height: 40px;
     border-radius: 20px;
@@ -102,9 +102,7 @@ body {
 }
 
 #btn-start:active {
-    background-color: var(--cor-secundaria);
-    color: var(--cor-primaria);
-    border: 4px solid #023c57;
+    border: 5px solid #1a025254;
 }
 
 #btn:hover,
@@ -130,20 +128,48 @@ body {
     font-size: 1rem;
 }
 
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 20px 0;
+}
+
+@media (max-width: 630px){
+    .input_config{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+}
 
 @media (max-width: 768px) {
+    main {
+        display: flex;
+        justify-content: center;
+        height: 60vh;
+    }
+    
+    .container {
+        display: flex;
+        flex-direction: column; /* Mantém os elementos na coluna */
+        align-items: center;
+    }
+
     #clock-time {
         font-size: 6rem;
     }
 
     .logo {
         font-size: 1.5rem;
-    }
-
-    #btn,
-    #btn-start {
-        width: 90px;
-        height: 35px;
     }
 
     .display-1 {
@@ -154,16 +180,6 @@ body {
 @media (max-width: 410px) {
     #clock-time {
         font-size: 5rem;
-    }
-
-    #btn {
-        width: 80px;
-        height: 30px;
-    }
-
-    #btn-start {
-        width: 80px;
-        height: 30px;
     }
 
     .display-1 {
