--- a/src/styles/reset-css.css
+++ b/src/styles/reset-css.css
@@ -5,6 +5,10 @@
 }
 
 html, body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     height: 100%;
     font-family: var(--font-primaria);
 }
